[package]
name = "suffix_utils"
version = "0.1.0"
authors = ["Masutani BANSHO <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rand_xoshiro = "*"
serde = {version = "1.0", features = ["derive"]}
num = "*"